@@ -45,6 +45,9 @@ Release 2.8.0 - UNRELEASED
   
     MAPREDUCE-6595. Fix findbugs warnings in OutputCommitter and
     FileOutputCommitter. (Akira AJISAKA via junping_du)
+    
+    MAPREDUCE-6316. Task Attempt List entries should link to the task overview.
+    (Siqi Li via gera)
   
   OPTIMIZATIONS
   
